devops/k8s/templates/msg-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: msg
  template:
    metadata:
      labels:
        service: msg
    spec:
      containers:
        - name: msg
          image: valkey/valkey:8
          ports:
            - containerPort: 6379
