devops/k8s/templates/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
        - name: cache
          image: valkey/valkey:8
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
        - name: web
          image: __WEB_SERVICE_IMAGE__
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /ht/liveness-probe/
              port: 8000
              httpHeaders:
                - name: Host
                  value: __PROJECT_HOST__
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ht/
              port: 8000
              httpHeaders:
                - name: Host
                  value: __PROJECT_HOST__
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
