devops/k8s/templates/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    service: db
  ports:
    - protocol: TCP
      name: main
      port: 5432
      targetPort: 5432
