devops/k8s/templates/msg-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: msg
spec:
  type: ClusterIP
  selector:
    service: msg
  ports:
    - protocol: TCP
      name: main
      port: 6379
      targetPort: 6379
