devops/k8s/templates/s3-proxy.yaml
---
# TODO: garage supports host-based buckets, so should just use the subdomains:
# static.projectname.internal and static.projectname.internal respectively
# There will be no need in this separate proxy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-proxy
  template:
    metadata:
      labels:
        app: s3-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: config-volume
          configMap:
            name: s3-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: s3-proxy
spec:
  selector:
    app: s3-proxy
  ports:
    - port: 3902
      targetPort: 80
