devops/k8s/templates/s3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3
spec:
  type: ClusterIP
  selector:
    service: s3
  ports:
    - protocol: TCP
      name: s3-api
      port: 3900
      targetPort: 3900
    - protocol: TCP
      name: s3-rpc
      port: 3901
      targetPort: 3901
    - protocol: TCP
      name: s3-web
      port: 3902
      targetPort: 3902
    - protocol: TCP
      name: s3-admin-api
      port: 3903
      targetPort: 3903
