devops/k8s/templates/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    service: web
  ports:
    - protocol: TCP
      name: web-http
      port: 8000
      targetPort: 8000
